# botoful

./: .gitignore  LICENSE  README.rst  pyproject.toml
botoful/: __init__.py  filters.py  query.py  reserved.py  serializers.py  table.py
tests/: conftest.py  db_settings.py  test_main.py  test_query.py  test_table.py
tests/fixtures/: db.py
